--- a/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/home.html
+++ b/SistemaDePedidos/SistemaPedidosWebApp/templates/SistemaPedidosWebApp/home.html
@@ -9,13 +9,13 @@
 <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'SistemaPedidosWebApp/img/image1.jpeg' %}" class="d-block w-100" alt="Imagen 1" style="height: 600px; object-fit: cover;">
+      <img src="{% static 'SistemaPedidosWebApp/img/image1.jpeg' %}" class="d-block w-100" alt="Imagen 1" style="height: 500px; object-fit: cover;">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'SistemaPedidosWebApp/img/image2.jpg' %}" class="d-block w-100" alt="Imagen 2" style="height: 600px; object-fit: cover;">
+      <img src="{% static 'SistemaPedidosWebApp/img/image2.jpg' %}" class="d-block w-100" alt="Imagen 2" style="height: 500px; object-fit: cover;">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'SistemaPedidosWebApp/img/image3.jpg' %}" class="d-block w-100" alt="Imagen 3" style="height: 600px; object-fit: cover;">
+      <img src="{% static 'SistemaPedidosWebApp/img/image3.jpg' %}" class="d-block w-100" alt="Imagen 3" style="height: 500px; object-fit: cover;">
     </div>
   </div>
 
@@ -98,7 +98,7 @@
     <!-- Producto 5 -->
     <div class="col-6 col-md-4 col-lg-custom">
       <div class="card h-100 border-0">
-        <img src="https://row.hyperx.com/cdn/shop/files/hyperx_cloud_iii_wireless_black_hero_1.png?v=1685993159" class="card-img-top" alt="Auriculares Gaming">
+        <img src="https://acdn-us.mitiendanube.com/stores/001/593/734/products/muzan_angulo-902e2b4aa508a61e26169868849935261-73c6da95440ed3a46916986887454861-1024-1024.png" class="card-img-top" alt="Auriculares Gaming">
         <div class="card-body text-center">
           <h5 class="card-title fw-semibold">Auriculares Gaming</h5>
           <p class="text-muted text-decoration-line-through mb-1">$30.000</p>
